created semiworkable queue, harddrop kinda works